--- a/vercel.json
+++ b/vercel.json
@@ -1,23 +1,11 @@
 {
   "version": 2,
   "builds": [
-    {
-      "src": "api/log-absentees.js",
-      "use": "@vercel/node"
-    },
-    {
-      "src": "index.html",
-      "use": "@vercel/static"
-    }
+    { "src": "api/log-absentees.js", "use": "@vercel/node" },
+    { "src": "index.html", "use": "@vercel/static" }
   ],
   "routes": [
-    {
-      "src": "/api/log-absentees",
-      "dest": "api/log-absentees.js"
-    },
-    {
-      "src": "/",
-      "dest": "index.html"
-    }
+    { "src": "/api/log-absentees", "dest": "api/log-absentees.js" },
+    { "src": "/", "dest": "index.html" }
   ]
 }
